small bug with text not showing now fixed

--- a/app/assets/stylesheets/slides.scss
+++ b/app/assets/stylesheets/slides.scss
@@ -44,7 +44,7 @@
 }
 
 .more-details {
-  display: none;
+  // display: none;
   position: absolute;
   z-index: 1;
   top: 400px;
